added basic js - form handeling

--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@ footer {
         background-color: rgb(255, 255, 255);
     }
 
-    .generated-poem {
+    .poem {
         margin-top: 20px;
         margin-bottom: 10px;
         line-height: 24px;
