--- a/src/index.css
+++ b/src/index.css
@@ -62,3 +62,18 @@ footer {
         line-height: 30px;
         color: black;
     }
+
+    .blink {
+        animation: blink-animation 1s steps(2, start) infinite;
+        -webkit-animation: blink-animation 1s steps(2, start) infinite;
+      }
+
+      @keyframes blink-animation {
+        to {
+          visibility: hidden;
+        }
+      }
+      @-webkit-keyframes blink-animation {
+        to {
+          visibility: hidden;
+        } }
